# asycio_model

./: .gitignore  asyncio_multithread.md  makefile  pyproject.toml  sample_makefile
src/: config.json
src/app/: app.py  manager.py
src/asyncio_learn/: main.py
src/camera_capture/: __init__.py  db_injector.py  model.py  video_capture.py  video_processor.py
src/har_model/: __init__.py  run_inference.py
src/static/js/: scripts.js
src/templates/: index.html
src/video_streamer/: streamer.py
