[tool.poetry]
name = "asyncio-model"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    {include = "app", from = "src"}, 
    {include = "camera_capture", from = "src"}, 
    {include = "har_model", from = "src"},
    {include = "video_streamer", from = "src"},
    {include = "asyncio_learn", from = "src"}
]

[tool.poetry.dependencies]
python = "~3.11"
fastapi = "^0.112.2"
uvicorn = "^0.30.6"
jinja2 = "^3.1.4"
websockets = "^13.0.1"
opencv-python = "^4.10.0.84"
asyncio = "^3.4.3"
aiortc = "^1.9.0"


[tool.poetry.group.dev.dependencies]
bpython = "^0.24"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
